--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -75,6 +75,8 @@ jobs:
           # If requirements.txt exists, install from it
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           # Install the package from setup.py
+          export VERSION=${{ steps.release.outputs.version }}
+          echo $VERSION
           python3 setup.py install
 
       # Upload to rattifyapi PyPi
@@ -89,4 +91,4 @@ jobs:
           echo $VERSION
           python3 setup.py sdist bdist_wheel
           ls -la dist/
-          python3 -m twine upload dist/*
+          python3 -m twine upload --skip-existing dist/*
